--- a/src/Topxia/WebBundle/Resources/views/CourseLesson/lesson-data-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLesson/lesson-data-modal.html.twig
@@ -25,10 +25,10 @@
             <td>{% if student.finishedTime %}{{student.finishedTime|date('Y-m-d H:i:s')}}{% else %}----{% endif %}</td>
             <td>{{(student.learnTime/60)|round(0, 'floor')}}</td>
             <td>
-              {% if lesson.type in ['live'] %}
-                ----
+              {% if lesson.type =='audio' or lesson.type =='video' %}
+                {{ lesson.length }}
               {% else %}
-                {{lesson.length|default('----')}}
+                ----
               {% endif %}
             </td>
             <td>{% if lesson.type == "video" or lesson.type == "audio" %}{{(student.watchTime/60)|round(0, 'floor')}}{% else %}----{% endif %}</td>
