--- a/src/Topxia/WebBundle/Resources/views/Marker/preview.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/preview.html.twig
@@ -1,5 +1,5 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
-{% block title %}{{'弹题管理'|trans}}{% endblock %}
+{% block title %}{{'视频管理'|trans}}{% endblock %}
 
 {% set script_controller = 'marker/preview' %}
 {% set bodyClass="marker-preview" %}
