--- a/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Subtitle/manage.html.twig
@@ -2,7 +2,7 @@
   <div class="text-track-title">
     {% set token = uploader_token('subtitle', media.id, 'private') %}
     <div class="row">
-      <div class="col-md-2 caption-uploader js-select-file" id="uploader" style="width: 120px" 
+      <div class="col-md-2 caption-uploader js-select-file" id="uploader" style="width: 130px" 
       data-media-id="{{ media.id }}"
       data-subtitle-create-url="{{ url('subtitle_create', {courseId: courseId}) }}"
       data-subtitle-list-url="{{ url('subtitle_media_subtitles', {courseId: courseId, mediaId: media.id}) }}"
@@ -10,7 +10,7 @@
       data-finish-url="{{ url('uploader_finished', {token:token}) }}"
       >
       </div>
-      <div class="col-md-9 caption-notify" style="width: 72%; padding-left: 0" >
+      <div class="col-md-9 caption-notify" style="width: 250px; padding-left: 0" >
         目前仅支持srt字幕，最多上传4个字幕
       </div>
     </div>
