--- a/src/Topxia/WebBundle/Resources/views/js_loader_async.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/js_loader_async.html.twig
@@ -37,7 +37,7 @@
       };
 
       script.src = path;
-      document.body.appendChild(script);
+      document.getElementById('modal').appendChild(script);
     };
 
     return {
