--- a/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/manage.html.twig
@@ -17,18 +17,18 @@
 <div class="tab-content">
   <div role="tabpanel" class="tab-pane active pane-question">
     <div>
-      <div class="text-track-title">
-        <div class="row">
+      <div class="text-track-title plm">
+        <div class="row clearfix">
           {% set token = uploader_token('subtitle', media.id, 'private') %}
-          <div class="col-md-2 caption-uploader js-select-file" id="uploader" style="width: 130px" data-media-id="{{ media.id }}" data-media-global-id="{{ media.globalId }}" data-subtitle-create-url="{{ url('media_subtitle_create', {mediaId: media.id}) }}" data-subtitle-list-url="{{ url('media_subtitle_list', {mediaId: media.id}) }}" data-init-url="{{ url('uploader_init', {token:token}) }}" data-finish-url="{{ url('uploader_finished', {token:token}) }}" >
+          <div class="caption-uploader js-select-file pull-left" id="uploader" style="width: 130px;{% if subtitles|length > 3 %}display: none;{% endif %}" data-media-id="{{ media.id }}" data-media-global-id="{{ media.globalId }}" data-subtitle-create-url="{{ url('media_subtitle_create', {mediaId: media.id}) }}" data-subtitle-list-url="{{ url('media_subtitle_list', {mediaId: media.id}) }}" data-init-url="{{ url('uploader_init', {token:token}) }}" data-finish-url="{{ url('uploader_finished', {token:token}) }}">
           </div>
-          <div class="col-md-9 caption-notify" style="width: 250px; padding-left: 0">
+          <div class="caption-notify pull-left" style="width: 250px; padding-left: 0">
             目前仅支持srt字幕，最多上传4个字幕
           </div>
         </div>
       </div>
       <div class="text-track-list mrm mts ptm">
-        <div class="mrm" id="track-select"></div>
+        <div class="mrm" id="track-select" data-subtitle-list="{{ subtitles|json_encode() }}"></div>
         <div class="text-track-overview mrm"></div>
       </div>
     </div>
