--- a/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
@@ -20,8 +20,8 @@
       <label >{{'用户中心'|trans}}</label>
     </div>
     <div class="controls col-md-8 radios mode-radios">
-      {{ radios('mode', {'default':'无'|trans, 'discuz':'Discuz (Ucenter)', 'phpwind':'phpwind (WindID)'}, setting.mode) }}
-      <div class="help-block">{{'支持phpwind 9系列，Discuz X2.5/X3.0/X3.1的用户中心'|trans}}</div>
+      {{ radios('mode', {'default':'无'|trans, 'discuz':'Discuz (Ucenter)'}, setting.mode) }}
+      <div class="help-block">{{'支持Discuz X2.5/X3.0/X3.1的用户中心'|trans}}</div>
     </div>
   </div>
   <div class="with-discuz" style="display:none;">
@@ -117,79 +117,6 @@
       <div class="col-md-3 control-label"><label>UC_PPP</label></div>
       <div class="controls col-md-8">
         <input class="form-control" type="text" value="{{ discuzConfig.uc_ppp|default('') }}" placeholder="UC_PPP" name="discuzConfig[uc_ppp]">
-      </div>
-    </div>
-  </div>
-
-  <div class="with-phpwind" style="display:none;">
-    <div class="row form-group with-phpwind" style="display:none;">
-      <div class="col-md-3 control-label"><label>{{'WindId配置'|trans}}</label></div>
-      <div class="controls col-md-8">
-        <div class="help-block"><a href="http://qiqiuyu.edusoho.com/course/125" target="_blank">{{'如何配置？'|trans}}</a></div>
-      </div>
-    </div>
-
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>conf.connect</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.conf.connect|default('') }}" placeholder="conf.connect" name="phpwindConfig[conf][connect]">
-      </div>
-    </div>
-
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>conf.serverUrl</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.conf.serverUrl|default('') }}" placeholder="conf.serverUrl" name="phpwindConfig[conf][serverUrl]">
-      </div>
-    </div>
-
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>conf.clientId</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.conf.clientId|default('') }}" placeholder="conf.clientId" name="phpwindConfig[conf][clientId]">
-      </div>
-    </div>
-
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>conf.clientKey</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.conf.clientKey|default('') }}" placeholder="conf.clientKey" name="phpwindConfig[conf][clientKey]">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>conf.charset</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.conf.charset|default('') }}" placeholder="conf.charset" name="phpwindConfig[conf][charset]">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>database.dsn</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.database.dsn|default('') }}" placeholder="database.dsn" name="phpwindConfig[database][dsn]">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>database.user</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.database.user|default('') }}" placeholder="database.user" name="phpwindConfig[database][user]">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>database.pwd</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="password" value="{{ phpwindConfig.database.pwd|default('') }}" placeholder="database.pwd" name="phpwindConfig[database][pwd]">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>database.charset</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.database.charset|default('') }}" placeholder="database.charset" name="phpwindConfig[database][charset]">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-md-3 control-label"><label>database.tableprefix</label></div>
-      <div class="controls col-md-8">
-        <input class="form-control" type="text" value="{{ phpwindConfig.database.tableprefix|default('') }}" placeholder="database.tableprefix" name="phpwindConfig[database][tableprefix]">
       </div>
     </div>
   </div>
