--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Overview/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Overview/index.html.twig
@@ -9,7 +9,11 @@
 {% endblock %}
 
 {% block main %}
+{% if overview.accessCloud == false %}
   {% include 'TopxiaAdminBundle:EduCloud/Overview:not-access.html.twig' %}
-  {#{% include 'TopxiaAdminBundle:EduCloud/Overview:normal-use.html.twig' %}#}
-  {#{% include 'TopxiaAdminBundle:EduCloud/Overview:disabled.html.twig' %}#}
+{% elseif overview.enabled == false %}
+  {% include 'TopxiaAdminBundle:EduCloud/Overview:disabled.html.twig' %}
+{% else %}
+  {% include 'TopxiaAdminBundle:EduCloud/Overview:normal-use.html.twig' %}
+{% endif %}
 {% endblock %}
