--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Overview/normal-use.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Overview/normal-use.html.twig
@@ -1,105 +1,115 @@
 {% if locked|default(0) == 0 %}
   <div class="alert alert-warning" role="alert">{{'您的教育云服务已被锁定，请联系客服人员：'|trans}}0571-86819929。</div>
 {% endif %}
-
-{% if enabled|default(1) == 1 %}
-  <div class="alert alert-danger" role="alert">{{'您的教育云服务已被禁用，请联系客服人员：'|trans}}0571-86819929。</div>
-{% endif %}
-{% if is_trial() %}
-  {% if trialhtml is not null %}
-    {{ trialhtml|raw }}
-  {% endif %}
-{% else %}
-  <div class="eduyun-main">
-  {% if enabled|default(1) == 0 %}
-    <div class="mask"></div>
-  {% endif %}
-
   <div class="row">
     <div class="col-md-8">
       <div class="edu-user clearfix">
         <div class="user-part pull-left">
           <img class="img-circle" {% if  isBinded.avatar|default("") == "" %} src="{{ default_path('user_avatar.png') }}" {% else %} src="{{ isBinded.avatar }}" {% endif %}>
-          <div class="user-name text-md pts">Hi,<span class="text-primary">阿本</span></div>
+          <div class="user-name text-md pts">Hi,<span class="text-primary">{{ isBinded.name }}</span></div>
         </div>
         <div class="user-part pull-left">
           <div class="ptm">余额</div>
-          <div class="money">¥66.00</div>
+          <div class="money">{{ overview.cashAccount }}</div>
           <button class="btn btn-primary btn-xs mrs">充值</button> 
           <a href="">费用中心</a>
         </div>
         <div class="user-part pull-left">
           <div class="ptm">代金券</div>
-          <div class="money">¥38.00</div>
+          <div class="money">{{ overview.couponAccount }}</div>
           <a href="">代金券管理</a>
         </div>
       </div>
-      <div class="edu-combo">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <div class="panel-title">已开通服务</div>
+
+
+      {% if paid == true %}
+        <div class="edu-combo">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <div class="panel-title">已开通服务</div>
+            </div>
+            <div class="panel-body">
+            {% if overview['services']['video'] == true %}
+              <div class="col-md-4">
+                <a href="" class="my-products-item">
+                  <i class="es-icon es-icon-playcircleoutline"></i>
+                  云视频
+                </a>
+              </div>
+            {% endif %}
+            {% if overview['services']['live'] == true %}
+              <div class="col-md-4">
+                <a href="" class="my-products-item">
+                  <i class="es-icon es-icon-zhibokecheng"></i>
+                  云直播
+                </a>
+              </div>
+            {% endif %}
+            {% if overview['services']['sms'] == true %}
+              <div class="col-md-4">
+                <a href="" class="my-products-item">
+                  <i class="es-icon es-icon-textsms"></i>
+                  云短信
+                </a>
+              </div>
+            {% endif %}
+            {% if overview['services']['search'] == true %}
+              <div class="col-md-4">
+                <a href="" class="my-products-item">
+                  <i class="es-icon es-icon-search"></i>
+                  云搜索
+                </a>
+              </div>
+            {% endif %}
+            </div>
           </div>
-          <div class="panel-body">
-            <div class="col-md-4">
-              <a href="" class="my-products-item">
-                <i class="es-icon es-icon-playcircleoutline"></i>
-                云视频
-              </a>
-            </div>
-            <div class="col-md-4">
-              <a href="" class="my-products-item">
-                <i class="es-icon es-icon-zhibokecheng"></i>
-                云直播
-              </a>
-            </div>
-            <div class="col-md-4">
-              <a href="" class="my-products-item">
-                <i class="es-icon es-icon-textsms"></i>
-                云短信
-              </a>
-            </div>
-            <div class="col-md-4">
-              <a href="" class="my-products-item">
-                <i class="es-icon es-icon-search"></i>
-                云搜索
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
+      {% endif %}
+    </div>
+
+
+    {% if unPaid == true %}
       <div class="edu-combo">
         <div class="panel panel-default">
           <div class="panel-heading">
             <div class="panel-title">需要开通／购买的服务</div>
           </div>
           <div class="panel-body">
+          {% if overview['services']['video'] == false %}
             <div class="col-md-4">
               <a href="" class="my-products-item">
                 <i class="es-icon es-icon-playcircleoutline"></i>
                 云视频
               </a>
             </div>
+          {% endif %}
+          {% if overview['services']['live'] == false %}
             <div class="col-md-4">
               <a href="" class="my-products-item">
                 <i class="es-icon es-icon-zhibokecheng"></i>
                 云直播
               </a>
             </div>
+          {% endif %}
+          {% if overview['services']['sms'] == false %}
             <div class="col-md-4">
               <a href="" class="my-products-item">
                 <i class="es-icon es-icon-textsms"></i>
                 云短信
               </a>
             </div>
+          {% endif %}
+          {% if overview['services']['search'] == false %}
             <div class="col-md-4">
               <a href="" class="my-products-item">
                 <i class="es-icon es-icon-search"></i>
                 云搜索
               </a>
             </div>
+          {% endif %}
           </div>
         </div>
       </div>
+    {% endif %}
     </div>
     <div class="col-md-4">
       <div class="panel panel-default">
@@ -146,4 +156,3 @@
   </div>
     
   </div>
-{% endif %}
