--- a/web/assets/v2/css/main.css
+++ b/web/assets/v2/css/main.css
@@ -13448,13 +13448,13 @@ textarea {
   top: 8px;
   color: white;
 }
-.track-select-parent .track-selcet-list li .convertStatus.convert-success {
+.track-select-parent .track-selcet-list li .convertStatus.convert-ok {
   background: #46c37b;
 }
 .track-select-parent .track-selcet-list li .convertStatus.convert-error {
   background: red;
 }
-.track-select-parent .track-selcet-list li .convertStatus.convert-doing {
+.track-select-parent .track-selcet-list li .convertStatus.convert-processing {
   background: blue;
 }
 .track-select-parent .track-selcet-list li .convertStatus.convert-waiting {
@@ -13491,10 +13491,10 @@ textarea {
 .subtitle-transcode-status.none {
   background: #919191;
 }
-.subtitle-transcode-status.doing {
+.subtitle-transcode-status.processing {
   background: #2db7f5;
 }
-.subtitle-transcode-status.success {
+.subtitle-transcode-status.ok {
   background: #46c37b;
 }
 .subtitle-transcode-status.error {
