--- a/web/assets/v2/less/page/text-track.less
+++ b/web/assets/v2/less/page/text-track.less
@@ -81,13 +81,13 @@
         right: 40px;
         top: 8px;
         color: white;
-        &.convert-success{
+        &.convert-ok{
           background: #46c37b;
         }
         &.convert-error{
           background: red;
         }
-        &.convert-doing{
+        &.convert-processing{
           background: blue;
         }
         &.convert-waiting{
@@ -129,10 +129,10 @@
   &.none{
     background: @gray;
   }
-  &.doing{
+  &.processing{
     background: @brand-info;
   }
-  &.success{
+  &.ok{
     background: @brand-primary;
   }
   &.error{
