--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -187,3 +187,4 @@
 @import 'page/class/class-detail-main-color.less';
 @import 'page/question-bank/testpaper-list-title.less';
 @import 'page/question-bank/testpaper-create-model.less';
+@import 'page/question-bank/testCreate.less';
