--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
@@ -1,6 +1,7 @@
 .testpaper-title {
     display: flex;
     justify-content: space-between;
+    padding: 0 25px;
     float: none;
     width: 100% !important;
     font-size: 16px;
